Cherry-pick r254141. rdar://problem/58559202

Flaky API Test: TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS
    https://bugs.webkit.org/show_bug.cgi?id=194340
    <rdar://problem/50507254>

    Reviewed by Eric Carlson.

    Workaround for AVFoundation crash for OS versions prior to platform fix. This crash occurrs infrequently
    while triggering KVO due to an internal @property change. Work around the crash by disabling KVO for that
    property at runtime, by injecting a new class method +automaticallyNotifiesObserversOfSuppressesVideoLayers
    immediately after soft linking the AVFoundation library.

    * pal/cocoa/AVFoundationSoftLink.mm:
    (PAL::justReturnsNO):
    (PAL::AVFoundationLibrary):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254141 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254590 268f45cc-cd09-0410-ab3c-d52691b4dbfc